openshift/kustomize/core-nlp/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: corenlp
  namespace: default
  annotations:
    description: Defines how to deploy corenlp
  labels:
    name: corenlp
    part-of: tno
    version: 1.0.0
    component: corenlp
    managed-by: kustomize
    created-by: kyle.morris
spec:
  replicas: 1
  selector:
    matchLabels:
      name: corenlp
      part-of: tno
      component: corenlp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: corenlp
      labels:
        name: corenlp
        part-of: tno
        component: corenlp
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: corenlp
          image: bcgov-c4awhwfpcremdbga.azurecr.io/corenlp:v4.5.6
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 2G
            limits:
              cpu: 500m
              memory: 6G
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
